test_suite/tests/ui/type-attribute/from.stderr
error: failed to parse type: from = "Option<T"
 --> tests/ui/type-attribute/from.rs:4:16
  |
3 | #[derive(Deserialize)]
  |          ----------- in this derive macro expansion
4 | #[serde(from = "Option<T")]
  |                ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
